# sdl-pixel-draw

./: CMakeLists.txt  LICENSE  README.md  copy_assets.cmake
src/: canvas.h  draw.c  draw.h  file_storage.c  file_storage.h  main.c  pixel.h
src/core/: binary_storage.c  binary_storage.h  canvas.c  canvas.h  mouse.c  mouse.h  screen.c  screen.h  storage.c  storage.h
src/storage/: binary_file_storage.c  binary_file_storage.h
